# cuckoo_video_line

./: README.md
cuckoo_video_line/cuckoo_video_line_android_2_5/bogo/: CMakeLists.txt  build.gradle
cuckoo_video_line/cuckoo_video_line_android_2_5/bogo/bugly/: BuglySymtabLog.txt  BuglyUploadLog.txt
cuckoo_video_line/cuckoo_video_line_android_2_5/bogo/eliaovideo/release/: output.json
cuckoo_video_line/cuckoo_video_line_android_2_5/bogo/src/main/: AndroidManifest.xml
cuckoo_video_line/cuckoo_video_line_android_2_5/bogo/src/main/assets/: ShareSDK.xml
cuckoo_video_line/cuckoo_video_line_android_2_5/bogo/src/main/cpp/: video_preprocessing_plugin_jni.cpp  video_preprocessing_plugin_jni.h
cuckoo_video_line/cuckoo_video_line_android_2_5/bogo/src/main/res/drawable/: accept_call_btn.xml  ar_record_audio_btn_selector.xml  bg_auth_video_record_btn.xml  bg_auth_video_record_btn_up.xml  bg_beckoning_num.xml  bg_beckoning_small_num.xml  bg_bind_phone_send_code.xml  bg_black_num.xml  bg_black_transparent.xml  bg_blue_btn.xml  bg_bubble_blue.xml  bg_bubble_gray.xml  bg_chat_menu.xml  bg_edtext.xml  bg_evaluate_select.xml  bg_evaluate_un_select.xml  bg_gift_animation.xml  bg_gift_count.xml  bg_gift_count_selected.xml  bg_gradual_left_white.xml  bg_gradual_right_white.xml  bg_gray_broder.xml  bg_green_num.xml  bg_grid_no2_num.xml  bg_grid_num.xml  bg_home_page_attention.xml  bg_home_video_pay.xml  bg_item_reward_coin.xml  bg_live_chat.xml  (+49 more)
cuckoo_video_line/cuckoo_video_line_android_2_5/bogo/src/main/res/drawable-hdpi/: bg_subscribe_right_rl.xml  bg_top_bar_color.xml
(+724 files in other folders)
